Homepage, Supporter still needs spacing fix

--- a/hero-fronend/src/Supporter.css
+++ b/hero-fronend/src/Supporter.css
@@ -107,3 +107,39 @@ ul {
     padding-left: 0;
 }
 
+
+
+.hero-dropdown {
+    /* display: none; */
+    position: absolute;
+    z-index: -1;
+    background: rgba(0, 0, 255, 0.9);
+    border-radius: 50px;
+    -webkit-transition: all 0.5s 0s ease;
+    -moz-transition: all 0.5s 0s ease;
+    -o-transition: all 0.5s 0s ease;
+    transition: all 0.5s 0s ease;
+}
+
+.close {
+    color: white;
+    background-color: transparent;
+    border: none;
+}
+
+.hero-dropdown:active {
+    
+}
+
+
+.descc {
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 20px;
+/* or 143% */
+display: flex;
+align-items: center;
+text-align: justify;
+color: #FFFFFF;
+}
